Mon Nov 24 02:48:54 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - data/driver.list: Add Chloride Desk Power 650 UPS to list. (Thanks to Cyril
   Pawelko for the report.)

Sun Nov 23 20:16:25 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/libusb.c: If claiming a USB device fails (possibly after a couple
   of retries), bail out. This should catch permissions (and other) problems
   that need user intervention to be resolved.

Thu Nov 20 20:08:23 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - docs/new-names.txt: change ambient temperature/humidity variable names to
   make clear that these are limit values, not minimum/maximum values seen
 - drivers/<various>: apply the above

Thu Nov 20 09:24:07 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - energizerups: tag as broken_driver, so scheduled for removal by 2.4.0

Mon Nov 17 19:52:28 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/Makefile.am: it looks like r1567 didn't take care of this for all
   BuildBots, retry

Mon Nov 17 19:06:08 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/Makefile.am: fix changes from r1566 that broke building

Mon Nov 17 09:56:47 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 * dummy-ups repeater mode:
   - drivers/dummy-ups.c, drivers/Makefile.am, man/dummy-ups.8: add a new
     running mode, called "repeater". The existing "dummy" mode which loads its
     definition from a file, is still suppported. The new "repeater" mode allows
     to get and relay (forward) data from a NUT server, using libupsclient.
     This can be useful for supervision purposes. On big network setup, this can
     also allow some load sharing between several upsd instances, using a point
     to point communication with the UPS.
     In a soon future, this will also help in creating the meta (virtual) device
     approach.
     This is still a work in progress, since instant commands and settable
     values are not yet supported.