@@ -20,23 +20,31 @@
 #include <stdlib.h>
 #include "usb-common.h"
 
-int is_usb_device_supported(usb_device_id_t *usb_device_id_list, 
-							int dev_VendorID, int dev_ProductID)
+int is_usb_device_supported(usb_device_id_t *usb_device_id_list, int dev_VendorID, int dev_ProductID)
 {
 	int retval = NOT_SUPPORTED;
 	usb_device_id_t *usbdev;
 
 	for (usbdev = usb_device_id_list; usbdev->vendorID != -1; usbdev++) {
-		if (usbdev->vendorID == dev_VendorID) {
-			/* mark as possibly supported if we see a known vendor */
-			retval = POSSIBLY_SUPPORTED;
-			if (usbdev->productID == dev_ProductID) {
-				/* call the specific handler, if exists */
-				if (usbdev->fun != NULL)
-					usbdev->fun();
-				return SUPPORTED;
-			}
+
+		if (usbdev->vendorID != dev_VendorID) {
+			continue;
 		}
+
+		/* flag as possibly supported if we see a known vendor */
+		retval = POSSIBLY_SUPPORTED;
+
+		if (usbdev->productID != dev_ProductID) {
+			continue;
+		}
+
+		/* call the specific handler, if it exists */
+		if (usbdev->fun != NULL) {
+			(*usbdev->fun)();
+		}
+
+		return SUPPORTED;
 	}
+
 	return retval;
 }
